# DiaPro

./: CMakeLists.txt  README.md
fftw/: .gitignore  brew_downloader.sh  runme.sh
resource/: Info.plist  editor.uidesc
source/: cids.h  compressor.h  controller.cpp  controller.h  deesser.h  delay.h  entry.cpp  exciter.c  exciter.h  mdaParameter.cpp  mdaParameter.h  paramids.h  process.h  processor.cpp  processor.h  version.h  vu.h
source/fx/: fxobjects.cpp  fxobjects.h
